# python-project-sample

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.cursor/rules/: python-best-practices.mdc
.devcontainer/: devcontainer.json
config/: app.yaml  logging.yaml
docs/ba/: overview.md
docs/sa/: technologies.md
docs/tasks/common/: init_project.md
pps/: __init__.py  app.py  app_factory.py  config.py
pps/blueprints/: health.py  hello.py  message.py
pps/cache/: __init__.py  abstract.py  exception.py  memory_cache.py  redis.py
pps/database/: __init__.py  exception.py  mongodb.py
pps/database/collections/: message.py
pps/file/: file.py
pps/logging/: __init__.py  config.py  formatter.py  handler.py  logger.py
pps/static/css/: message.css
pps/templates/message/: index.html
